<?xml version="1.0" encoding="UTF-8"?>
<package>
	<name>agitr</name>
	<version>0.0.0</version>
	<description>The agitr package</description>
	<maintainer email="rosuser@todo.todo">rosuser</maintainer>
	<license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>geometry_msgs</build_depend>
	<run_depend>geometry_msgs</run_depend>
	<build_depend>turtlesim</build_depend>
	<run_depend>turtlesim</run_depend>
	<build_depend>rospy</build_depend>
	<run_depend>rospy</run_depend>
	<build_depend>std_srvs</build_depend>
	<run_depend>std_srvs</run_depend>
</package>